Fixed some css issues
images too big for small screen size, not displaying now for small size

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -163,9 +163,8 @@ a {
 
 /* Character Detail page */
 .masthead {
-    min-height: 85vh;
+    max-height: 85vh;
     padding: 20px 0;
-    align-items: stretch;
 }
 
 #info-all-together{
@@ -203,6 +202,7 @@ a {
     border-top-left-radius: 10%;
     border-top-right-radius: 10%;
     margin-top: 10px;
+    max-height: 80vh;
 }
 
 .masthead .container {
@@ -281,6 +281,7 @@ a {
         width: 100%;
     }
 }
+
 
 
 /* My characters page */
